Tue Jan 25 11:43:28 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* som.c, som.h (bfd_som_set_section_attributes,
	bfd_som_set_subsection_attributes): Change parameters from char
	to int.  Following a prototype with an old-style function definition
	in the presence of widened parameters is a GCC-ism not supported
	by the HP compiler in ANSI mode.

Tue Jan 25 11:46:46 1994  Ian Lance Taylor  (ian@tweedledumb.cygnus.com)

	* reloc.c (bfd_get_reloc_size): Size of type -2 is 4 bytes, not 2.

	* hp300hpux.c (MY(write_object_contents)): Write out the symbols
	before writing out the relocs, so that the right symbol indices
	are used.

	* archive.c (do_slurp_bsd_armap, bfd_slurp_bsd_armap_f2): Do not
	try to overlay the internal carsyms on the external symdefs.  That
	can not work if the size of a host pointer is larger than 4 bytes.

	* format.c (bfd_check_format_matches): Cast result of
	bfd_xmalloc_by_size_t.
	* opncls.c (_bfd_new_bfd): Avoid ANSI C prototype.

	* archive.c: Reindented to GNU standards.

Mon Jan 24 14:41:23 1994  David J. Mackenzie  (djm@thepub.cygnus.com)

	* opncls.c (_bfd_new_bfd, _bfd_new_bfd_contained_in): Add
	"_bfd_" to function names.
	* archive.c (_bfd_create_empty_archive_element_shell),
	libbfd-in.h: Change callers.

	* libbfd.c (bfd_zmalloc): Renamed from zalloc.
	* libbfd.c (bfd_add_to_string_table),
	trad-core.c (trad_unix_core_file_p),
	targets.c (bfd_target_list),
	ptrace-core.c (ptrace_unix_core_file_p),
	opncls.c (new_bfd), libbfd-in.h,
	ieee.c (ieee_make_empty_symbol),
	elf32-hppa.c (hppa_elf_stub_branch_reloc),
	(hppa_elf_stub_reloc): Change callers.
	* libbfd.h: Regenerated.

	* archive.c (_bfd_look_for_bfd_in_cache): Add "_bfd_" to name.
	(_bfd_get_elt_at_filepos), 
	coff-rs6000.c (rs6000coff_get_elt_at_filepos), libbfd-in.h:
	Change callers.

	* format.c (bfd_check_format_matches), libbfd-in.h, targets.c,
	elfcode.h (elf_object_p): Rename target_vector to bfd_target_vector
	and default_vector to bfd_default_vector.